# constrained_decoding_ballerina

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TRACING_README.md  prompt.md  run_server_with_trace.sh  run_trace_workflow.sh
invoker/: Ballerina.toml  functions.bal  grammar-with-while.json  main.bal  no-grammar.json  template.gbnf  types.bal  with-grammar.json  with-prefill-no-expr.json  with-prefill.json
lark/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sample_input.txt  spec.lark  spec_clean.lark  spec_minimal.lark
lark/lark_validator/: __init__.py  validator.py
spec_builder/: .gitignore  README.md  main.bal  package.json  tsconfig.json
spec_builder/.claude/: settings.local.json
spec_builder/grammars/: spec.gbnf  spec_no_expr.gbnf  spec_no_while.gbnf
spec_builder/src/: index.ts  types.ts  validator.ts
token-visualizer/: index.html  meow.sh  package.json  test_adapter.js
token-visualizer/public/: grammar-with-while.json  grammar-without-while.json  no-grammar.json  with-grammar.json  with-prefill-no-expr.json  with-prefill.json
token-visualizer/src/: App.jsx  index.css
token-visualizer/src/components/: TokenDetail.jsx  TokenStream.jsx
token-visualizer/src/hooks/: useTokenTrace.js
token-visualizer/src/utils/: dataAdapter.js
tracer/: README.md  __init__.py  exporter.py  merge_logs.py  models.py  parser.py  proxy_server.py  test_structured_export.py
