[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lark-validator"
version = "1.0.0"
description = "Validator for Lark grammar files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Developer" }
]
dependencies = [
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
lark-validator = "lark_validator.validator:main"

[tool.hatch.build.targets.wheel]
packages = ["lark_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
